src/run_environment/local/snapshots/codspeed_runner__run_environment__local__provider__tests__github_run_environment_metadata-2.snap
---
source: src/run_environment/local/provider.rs
expression: run_part
---
{
  "runId": "test-run-id",
  "runPartId": "local-job",
  "jobName": "local-job",
  "metadata": {}
}
