src/run_environment/local/snapshots/codspeed_runner__run_environment__local__provider__tests__github_run_environment_metadata.snap
---
source: src/run_environment/local/provider.rs
expression: run_environment_metadata
---
{
  "ref": "[commit_hash]",
  "headRef": "main",
  "baseRef": null,
  "owner": "CodSpeedHQ",
  "repository": "codspeed",
  "event": "local",
  "sender": null,
  "ghData": null,
  "glData": null,
  "localData": {
    "expectedRunPartsCount": 1
  },
  "repositoryRootPath": "[root_path]"
}
