src/run_environment/local/snapshots/codspeed_runner__run_environment__local__provider__tests__new_falls_back_to_project_repository.snap
---
source: src/run_environment/local/provider.rs
expression: run_environment_metadata
---
{
  "ref": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
  "headRef": null,
  "baseRef": null,
  "owner": "CodSpeedHQ",
  "repository": "local-runs",
  "event": "local",
  "sender": null,
  "localData": {
    "expectedRunPartsCount": 1
  },
  "repositoryRootPath": "[root_path]"
}
