src/run_environment/local/snapshots/codspeed_runner__run_environment__local__provider__tests__new_with_github_remote_found_on_codspeed.snap
---
source: src/run_environment/local/provider.rs
expression: run_environment_metadata
---
{
  "ref": "[commit_hash]",
  "headRef": "main",
  "baseRef": null,
  "owner": "my-repo",
  "repository": "my-owner",
  "event": "local",
  "sender": null,
  "localData": {
    "expectedRunPartsCount": 1
  },
  "repositoryRootPath": "[root_path]"
}
